# zj_humanoid_sdk_ros

./: .gitignore  README.md  package-lock.json  package.json  services.json  services.yaml  topics.json  zj_humanoid_ros_interface.md
.github/workflows/: deploy.yml
api_struct/: README.md  config.yaml  demos_test.py  demos_test_shell.sh  generate_ros_tests.py  simple_ros_caller.py  zj_humanoid_interfaces.json  zj_humanoid_interfaces.yaml  zj_humanoid_ros_test.py
api_struct/demos_combined/: right_arm_movej.py  right_arm_movej.yaml  wave_and_say_hello.py  wave_and_say_hello.yaml
api_struct/scripts/: README.md  README_test_scripts.md  demos_test.py  demos_test.sh  generate_docs_from_yaml.py  generate_json_from_yaml.py  generate_mock_package.py  generate_ros_tests.py  generate_vitepress_docs.py  generate_whole_yaml.py  run_all_generators.py
docs/: DEPLOY.md  README.md  develop_guides.md  index.md  markmap_message_type.md  web_tech.md  web_telec.md  zj_humanoid.md  zj_humanoid_interfaces.md  zj_humanoid_ros_interface.md  zj_humanoid_types.md
docs/.vitepress/: config.ts  markmap_message_type.md  markmap_ros_api.md
docs/api/: audio.md  chassis.md  hand.md  lowerlimb.md  manipulation.md  navigation.md  other.md  robot.md  sensor.md  upperlimb.md  zj_humanoid_ros_api.md
docs/demos/: Combined_Example.md  lowerlimb.md  manipulation.md
docs/public/: zj_humanoid_types_25_R3.run
docs/src/: markmap_message_type.md  zj_humanoid_types.md
docs/src/api/: audio.md  (+4 more)
docs/tools/: data_display.md  hos_dev.md  web_tech.md
docs/versions/: README.md
mock_packages/: .dockerignore  .gitignore  CHANGELOG_DOCKER.md  Dockerfile  README_DOCKER.md  docker-compose.yml  entrypoint.sh  test_docker.sh
mock_packages/zj_humanoid_mock/: CMakeLists.txt  README.md  package.xml
mock_packages/zj_humanoid_mock/scripts/: mock_server.py
navi_demos/: CMakeLists.txt  package.xml
navi_demos/launch/: hand_ctrl.launch
navi_demos/python/Audio/: service_GetVolume_client.py  service_GetmicrophoneInfo_client.py  service_GetspeakerInfo_client.py  service_MediaPlay_client.py  service_SetVolume_client.py  service_SetmicrophoneInfo_client.py  service_SetspeakerInfo_client.py  service_listen_client.py  service_tts_client.py  service_tts_zhiwen_client_test.py
navi_demos/python/CV/: demo-pytorch.py  face_neck_gpu.py  opt-test.py  test.py  test1.py
navi_demos/python/Cmd/: run_cmd_client.py  run_cmd_server.py
navi_demos/python/Downlimb/: forward.py  forwardOne.py  move.py  turn.py
navi_demos/python/Hand/: hand_one.py
navi_demos/python/LLM/: service_chat_client.py  service_nlu_client.py
navi_demos/python/Manipulation/: loosen_hand_action_client.py  scene_update_client.py  tool_funcs_bag.py  trajectory_plan_client.py
navi_demos/python/Manipulation/mesh/processed/: cupboard1.stl  shelf_l_lower.stl  shelf_r_lower.stl
navi_demos/python/Navigation/: point2point.py
navi_demos/python/RobotSettings/: connect_wifi_clinet.py  get_robot_basic_info_clinet.py  get_wifi_info_clinet.py
navi_demos/python/Uplimb/: arm_left_action.py  arm_right_action.py  body_servoj_msg_ctrl.py  left_arm_action.py  neck_action.py  neck_movej_service_test.py  neck_nod_action.py  new_init_pose.py  nod.py  raise_hand.py  shake_head.py  speedL_ctrl.py  waist_action.py  wave_MoveJ.py
navi_demos/src/hand_ctrl/: service_gesture_client.cpp  service_joint_client.cpp  service_task_client.cpp
navi_demos/src/robot_state/: robot_state_get_set.cpp  set_robot_state.cpp
navi_demos/src/uplimb_ctrl/: Wave_Movej.cpp  left_arm_trajectory_action.cpp  left_arm_waist_trajectory_action.cpp  neck_trajectory_action.cpp  right_arm_movej_client.cpp  right_arm_movel_client.cpp  teach_mode_client.cpp  waist_trajectory_action.cpp
types_dist/: zj_humanoid_types_25_R3.run
types_package/: zj_humanoid_types_25_R3.run
zj_humaniod/: CMakeLists.txt  package.xml
zj_humaniod/audio/msg/: AudioData.msg  entity.msg  nlu_result.msg
zj_humaniod/audio/srv/: Chat.srv  GetDeviceList.srv  GetVolume.srv  Listen.srv  MediaPlay.srv  NLU.srv  SetDevice.srv  SetVolume.srv  TTS.srv
zj_humaniod/hand/srv/: Gesture.srv  Joint.srv  Task.srv
zj_humaniod/manipulation/srv/: GetScenePose.srv  GetTrajectory.srv
zj_humaniod/navigation/msg/: LocalMap.msg  LocalMapData.msg  MetaData.msg  NavigationStatus.msg  PlanState.msg  TaskInfo.msg  Waypoint.msg
zj_humaniod/robot/msg/: BatteryInfo.msg  MotorInfo.msg  StateMsg.msg  WorkStatus.msg
zj_humaniod/robot/srv/: BasicInfo.srv  CameraInfo.srv  ConnectWifi.srv  JsonInfo.srv  RunCmd.srv  SetState.srv  WifiInfo.srv
zj_humaniod/uplimb/msg/: Joints.msg  Pose.msg  SpeedJ.msg  SpeedL.msg
zj_humaniod/uplimb/srv/: FK.srv  MoveJByPose.srv  MoveL.srv  MoveLByPath.srv  Servo.srv
zj_humaniod/upperlimb/msg/: TcpSpeed.msg
zj_humaniod/upperlimb/srv/: IK.srv  MoveJ.srv  MoveJByPath.srv
zj_humanoid/audio/: ServiceInfo.md  service.json  service.yaml
zj_humanoid/manipulate/: ServiceInfo.md  rosservice_call_zj_humanoid_manipulate_version_{}_.yaml
(+1070 files in other folders)
